--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,71 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 {{- partial "head.html" . -}}
+<style>
+	.switch {
+	  position: relative;
+	  display: inline-block;
+	  width: 45px;
+	  height: 19px;
+	}
+	
+	.switch input { 
+	  opacity: 0;
+	  width: 0;
+	  height: 0;
+	}
+	
+	.slider {
+	  position: absolute;
+	  cursor: pointer;
+	  top: 0;
+	  left: 0;
+	  right: 0;
+	  bottom: 0;
+	  background-color: #fac564;
+	  -webkit-transition: .4s;
+	  transition: .4s;
+	}
+	
+	.slider:before {
+	  position: absolute;
+	  content: "";
+	  height: 10px;
+	  width: 10px;
+	  left: 4px;
+	  bottom: 4px;
+	  background-color: white;
+	  -webkit-transition: .4s;
+	  transition: .4s;
+	}
+	
+	input:checked + .slider {
+	  background-color: #fac564;
+	}
+	
+	input:focus + .slider {
+	  box-shadow: 0 0 1px #fac564;
+	}
+	
+	input:checked + .slider:before {
+	  -webkit-transform: translateX(26px);
+	  -ms-transform: translateX(26px);
+	  transform: translateX(26px);
+	}
+	
+	/* Rounded sliders */
+	.slider.round {
+	  border-radius: 34px;
+	}
+	
+	.slider.round:before {
+	  border-radius: 50%;
+	}
 
+	.enLang{
+		margin-left: 15px;
+	}
+	</style>
 <body>
 	{{- partial "header.html" . -}}
 	{{ if not .IsHome }}
@@ -10,5 +74,24 @@
 	{{- block "main" . }}{{- end }}
 	{{- partial "footer.html" . -}}
 </body>
+
+<script>
+var selectedLanguage = localStorage.getItem("language");
+var lang;
+if (selectedLanguage == "en"){
+lang = "en";
+}else if(selectedLanguage == "fr"){
+	document.getElementById("langCheckBox").checked = true;
+lang = "fr";
+}else{
+	lang = "en"
+}
+	  let langData = document.getElementsByClassName("has_lang")
+	  for (var i=0; i <langData.length; i++) {
+		  if(langData[i].attributes.lang.value !== lang){
+			langData[i].remove();
+		  }
+	  }
+	</script>
 
 </html>
