--- a/layouts/_default/services.html
+++ b/layouts/_default/services.html
@@ -4,8 +4,10 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">{{ .Params.services_heading }}</h2>
-        <p>{{ .Params.services_content }}</p>
+        <h2 class="mb-4 has_lang" lang="en">{{ .Params.services_heading }}</h2>
+        <h2 class="mb-4 has_lang" lang="fr">{{ .Params.services_heading_fr }}</h2>
+        <p class="has_lang" lang="en">{{ .Params.services_content }}</p>
+        <p class="has_lang" lang="fr">{{ .Params.services_content_fr }}</p>
       </div>
     </div>
     <div class="row">
@@ -16,8 +18,10 @@
             <img src="{{.Params.icon_image}}">
           </div>
           <div class="media-body">
-            <h3 class="heading">{{ .Params.title }}</h3>
-            <p>{{ .Params.service_content }}</p>
+            <h3 class="heading has_lang" lang="en">{{ .Params.title }}</h3>
+            <h3 class="heading has_lang" lang="fr">{{ .Params.title_fr }}</h3>
+            <p class="has_lang" lang="en">{{ .Params.service_content }}</p>
+            <p class="has_lang" lang="fr">{{ .Params.service_content_fr }}</p>
           </div>
         </div>
       </div>
