--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,25 +5,108 @@
 			<span class="oi oi-menu"></span> Menu
 		  </button>
 
-
+<!-- 
 	  <div class="collapse navbar-collapse" id="ftco-nav">
 		<ul class="navbar-nav ml-auto">
 			{{- $currentPage := . -}}
 			{{ range .Site.Menus.main -}}
-			<li class='{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}'>
+			<li class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} has_lang" lang="en">
 				<a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
-			</li> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+			</li> &nbsp; &nbsp; &nbsp;
 			{{- end }}
 		</ul>
+	  </div> -->
+
+	  <div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav ml-auto">
+			<li class="main has_lang" lang="en">
+				<a href="/">{{ .Params.header_home}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/">{{ .Params.header_home_fr}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+
+			<li class="main has_lang" lang="en">
+				<a href="/menu">{{ .Params.header_menu}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/menu">{{ .Params.header_menu_fr}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+
+			<li class="main has_lang" lang="en">
+				<a href="/services">{{ .Params.header_services}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/services">{{ .Params.header_services_fr}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+
+			<li class="main has_lang" lang="en">
+				<a href="/blogs">{{ .Params.header_blog}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/blogs">{{ .Params.header_blog_fr}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+
+			<li class="main has_lang" lang="en">
+				<a href="/about">{{ .Params.header_about}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/about">{{ .Params.header_about_fr}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+
+			<li class="main has_lang" lang="en">
+				<a href="/contact">{{ .Params.header_contact}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/contact">{{ .Params.header_contact_fr}}</a>
+			</li> &nbsp; &nbsp; &nbsp;
+		</ul>
+	  </div>
+	  
 	  </div>
 
-
-	  </div>
-
-	  <ul>
+	  <!-- <ul>
 		{{ range $.Site.Home.AllTranslations }}
 		<li><a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
 		{{ end }}
+		</ul> -->
+	 
+		<ul>
+		<li onclick="changeLanguage('en')"><a>en</a></li>
+		<li onclick="changeLanguage('fr')"><a>fr</a></li>
 		</ul>
-  </nav>
-<!-- END nav -->
+		
+		<label class="switch">
+			<!-- <span class="enLang">en</span> -->
+			<input type="checkbox" id="langCheckBox" onclick="changeLanguage()">
+			<span class="slider round"></span>
+			<!-- <span class="frLang">fr</span> -->
+		  </label>
+
+	</nav>
+
+<script>
+	function changeLanguage(e) {
+  if (e) {
+    if (e == "en") {
+      localStorage.setItem("language", "en");
+      location.reload();
+    } else {
+      localStorage.setItem("language", "fr");
+      location.reload();
+    }
+  } else {
+    var value = document.getElementById("langCheckBox").checked;
+    if (value) {
+      localStorage.setItem("language", "fr");
+      location.reload();
+    } else {
+      localStorage.setItem("language", "en");
+      location.reload();
+    }
+  }
+}
+
+</script>
+
+	<!-- END nav -->
