--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
 		</ul>
 	  </div> -->
 
-	  <div class="collapse navbar-collapse" id="ftco-nav">
+	  <!-- <div class="collapse navbar-collapse" id="ftco-nav">
 		<ul class="navbar-nav ml-auto">
 			<li class="main has_lang" lang="en">
 				<a href="/">{{ .Params.header_home}}</a>
@@ -60,6 +60,18 @@
 			<li class="main has_lang" lang="fr">
 				<a href="/contact">{{ .Params.header_contact_fr}}</a>
 			</li> &nbsp; &nbsp; &nbsp;
+		</ul>
+	  </div> -->
+	  <div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav ml-auto">
+			{{ range where .Site.Pages "Type" "header" }}
+			<li class="main has_lang" lang="en">
+				<a href="{{ .Params.link}}">{{ .Params.header_name}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+			<li class="main has_lang" lang="fr">
+				<a href="/">{{ .Params.header_name_fr}}</a>
+			</li>&nbsp; &nbsp; &nbsp;
+				{{end}}
 		</ul>
 	  </div>
 	  
